
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int LPWSTR ;


 int GetProcessHeap () ;
 int HeapFree (int ,int ,int ) ;
 int IS_INTRESOURCE (int ) ;

__attribute__((used)) static void res_free_str( LPWSTR str )
{
    if (!IS_INTRESOURCE(str))
        HeapFree( GetProcessHeap(), 0, str );
}
